--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const base_url = "https://www.woodboxes.co";
 									<img src="images/photo.jpg" width="1800" height="1200" alt="">
 								</div>
 								<div class="uk-card-body">
-									<h3 class="uk-card-title">Headline</h3>
+									<h3 class="uk-card-title">Headline 1</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
 								</div>
 							</div>
@@ -50,21 +50,24 @@ const base_url = "https://www.woodboxes.co";
 									<img src="images/dark.jpg" width="1800" height="1200" alt="">
 								</div>
 								<div class="uk-card-body">
-									<h3 class="uk-card-title">Headline</h3>
+									<h3 class="uk-card-title">Headline 2</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
 								</div>
 							</div>
 						</li>
 						<li>
-							<div class="uk-card uk-card-default">
-								<div class="uk-card-body">
-									<h3 class="uk-card-title"><a href=`${base_url}/products`>Mirar más</a></h3>
-								</div>
+							<div class="uk-card uk-border-rounded uk-background-primary uk-card-default" style="height: 100%;">
+								<a href=`${base_url}/products`>
+									<div class="uk-flex uk-flex-middle uk-card-body uk-flex-column" style="height: 100%; justify-content: center;">
+										<h3 class="uk-card-title">Mirar más</h3>
+										<button class="uk-button uk-border-circle">></button>
+									</div>
+								</a>
 							</div>
 						</li>
 					</ul>
 			
-					<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+					<a style="" class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
 					<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
 			
 				</div>
