--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,11 +56,11 @@ const base_url = "https://www.woodboxes.co";
 							</div>
 						</li>
 						<li>
-							<div class="uk-card uk-border-rounded uk-background-primary uk-card-default" style="height: 100%;">
-								<a href=`${base_url}/products`>
+							<div class="uk-card uk-border-rounded uk-background-primary uk-card-default" style="position: relative; height: 100%;">
+								<a href=`${base_url}/products` style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; cursor: pointer;">
 									<div class="uk-flex uk-flex-middle uk-card-body uk-flex-column" style="height: 100%; justify-content: center;">
 										<h3 class="uk-card-title">Mirar más</h3>
-										<button class="uk-button uk-border-circle">></button>
+										<button style="height: 40px; width: 40px;" class="uk-button uk-border-circle">></button>
 									</div>
 								</a>
 							</div>
