--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,6 +56,17 @@ const base_url = "https://www.woodboxes.co";
 							</div>
 						</li>
 						<li>
+							<div class="uk-card uk-card-default">
+								<div class="uk-card-media-top">
+									<img src="images/dark.jpg" width="1800" height="1200" alt="">
+								</div>
+								<div class="uk-card-body">
+									<h3 class="uk-card-title">Headline 2</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+								</div>
+							</div>
+						</li>
+						<li>
 							<div class="uk-card uk-border-rounded uk-card-default" style="border: 1px solid #111; position: relative; height: 100%;">
 								<a href=`${base_url}/products` style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; cursor: pointer;">
 									<div class="uk-flex uk-flex-middle uk-card-body uk-flex-column" style="height: 100%; justify-content: center;">
