--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const base_url = "https://www.woodboxes.co";
 		<div class="uk-margin">
 			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
 				<div class="uk-card-media-left uk-cover-container">
-					<img src="images/light.jpg" alt="">
+					<img src="./assets/brand/logo.png" alt="">
 				</div>
 				<div>
 					<div class="uk-card-body">
@@ -36,7 +36,7 @@ const base_url = "https://www.woodboxes.co";
 						<li>
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="images/photo.jpg" width="1800" height="1200" alt="">
+									<img src="./assets/brand/logo.png" width="1800" height="1200" alt="">
 								</div>
 								<div class="uk-card-body">
 									<h3 class="uk-card-title">Headline 1</h3>
@@ -47,7 +47,7 @@ const base_url = "https://www.woodboxes.co";
 						<li>
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="images/dark.jpg" width="1800" height="1200" alt="">
+									<img src="./assets/brand/logo.png" width="1800" height="1200" alt="">
 								</div>
 								<div class="uk-card-body">
 									<h3 class="uk-card-title">Headline 2</h3>
@@ -58,7 +58,7 @@ const base_url = "https://www.woodboxes.co";
 						<li>
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="images/dark.jpg" width="1800" height="1200" alt="">
+									<img src="./assets/brand/logo.png" width="1800" height="1200" alt="">
 								</div>
 								<div class="uk-card-body">
 									<h3 class="uk-card-title">Headline 2</h3>
@@ -89,7 +89,7 @@ const base_url = "https://www.woodboxes.co";
 		<div class="uk-margin">
 			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
 				<div class="uk-card-media-left uk-cover-container">
-					<img src="images/light.jpg" alt="">
+					<img src="./assets/brand/logo.png" alt="">
 				</div>
 				<div>
 					<div class="uk-card-body">
