--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const base_url = "https://www.woodboxes.co";
 		<div class="uk-margin">
 			<div class="uk-slider-container-offset" uk-slider>
 
-				<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+				<div uk-slider="finite: false; set: false;" class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 			
 					<ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
 						<li>
