--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,9 @@ const base_url = "https://www.woodboxes.co";
 			</div>
 		</div>
 		<div class="uk-margin">
-			<div class="uk-slider-container-offset" uk-slider>
+			<div class="uk-slider-container-offset" uk-slider="finite: false; set: false;>
 
-				<div uk-slider="finite: false; set: false;" class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+				<div" class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 			
 					<ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
 						<li>
