--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const base_url = "https://www.woodboxes.co";
 			</div>
 		</div>
 		<div class="uk-margin">
-			<div class="uk-slider-container-offset" uk-slider="finite: false; set: false;">
+			<div class="uk-slider-container-offset" uk-slider="finite: false, set: false;">
 
 				<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 			
