--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,10 @@ const vision = 'La visón de Woodbox es "ser el lugar y la forma de satisfacció
 const valores = ["Responsabilidad", "Respeto", "Calidad", "Cooperación", "Escucha", "Puntualidad"];
 ---
 
-<Layout title="WoodBox: Sobre nosotros">
+<Layout 
+    title="WoodBox: Sobre nosotros" 
+    description=""
+>
     <Header />
     <main>
         <div class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
