--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,10 @@ import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
 ---
 
-<Layout title="WoodBox: Contactanos">
+<Layout 
+    title="WoodBox: Contactanos" 
+    description=""
+>
     <Header />
     <main>
         <div class="uk-alert-primary" uk-alert>
