--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ const phrase = "Guarda tus tesoros con estilo y funcionalidad, mientras añades 
 const base_url = "https://www.woodboxes.co";
 ---
 
-<Layout title="Woodbox">
+<Layout 
+	title="Woodbox: Custom Works"
+	description=`Woodbox: ${phrase}`
+>
+
 	<Header />
 	<main>
 		<div class="uk-flex-column uk-margin uk-border-rounded uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="https://images.unsplash.com/photo-1490822180406-880c226c150b?fit=crop&w=650&h=433&q=80" uk-img>
