--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import "../styles/privacy.css";
 ---
 
-<Layout title="WoodBox: Privacy Policy">
+<Layout title="WoodBox: Privacy Policy" description="">
     <Header />
     <main>
         <h1>Privacy Policy</h1>
