--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -32,7 +32,10 @@ const team = [
 ];
 ---
 
-<Layout title="Equipo de WoodBox">
+<Layout 
+    title="Equipo de WoodBox"
+    description=""
+>
     <Header />
     <main>
         <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding">
