--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import "../styles/terms.css";
 ---
 
-<Layout title="WoodBox: Terms & Conditions">
+<Layout title="WoodBox: Terms & Conditions" description="">
     <Header />
     <main>
         <h1>Terms and Conditions</h1>
