--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,7 +105,7 @@ const base_url = "https://www.woodboxes.co";
 		</div>
 		<div style="border: 1px solid #111" class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
 			<div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-				<img src="./assets/newsletter.jpg" alt="Newsletter WoodBox">
+				<img src="./assets/newsletter.jpg" style="height: 100%; object-fit:cover;" alt="Newsletter WoodBox">
 			</div>
 			<div>
 				<div class="uk-card-body">
