--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,7 +113,7 @@ const base_url = "https://www.woodboxes.co";
 					<form method="POST" action="#" id="formV1">
 						<label for="form_email">Danos tu correo: </label><input id="form_email" style="border: 1px solid #111;" class="uk-input uk-form-blank uk-form-width-medium" type="email" placeholder="john.doe@gmail.com" required>
 						<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-							<label><input class="uk-checkbox" type="checkbox"> Acepto terminos y condiciones</label>
+							<label><input class="uk-checkbox" type="checkbox" required> Acepto terminos y condiciones</label>
 						</div>
 						<button class="uk-button uk-button-default">Suscribirme</button>
 					</form>
