--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,12 +2,11 @@
 export interface Props {
 }
 //const { } = Astro.props;
-
 const base_url = "https://www.woodboxes.co";
 ---
 
   <nav class="uk-navbar-container">
-    <div class="uk-container">
+    <div class="" style="max-width: 1000px; margin: 0 auto;">
         <div uk-navbar class="uk-margin-top uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
