--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const valores = ["Responsabilidad", "Respeto", "Calidad", "Cooperación", "Escuc
 >
     <Header />
     <main>
-        <div class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
+        <div style="max-width: 1000px; margin: 0 auto;" class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
             <h1>Mision, Vision y Valores de la empresa</h1>
             <hr>
             <div>
