--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -7,11 +7,11 @@ import "../styles/contact.css";
 const team = [
     {
         name: "Celeste Rodriguez",
-        profession: ""
+        profession: "SEO"
     },
     {
         name: "Emanuel Zabaleta",
-        profession: ""
+        profession: "Web Developer"
     },
     {
         name: "Ariana Ramos",
@@ -38,10 +38,10 @@ const team = [
 >
     <Header />
     <main>
-        <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding">
+        <div style="max-width: 1000px; margin: 0 auto;" class="uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding">
             <h1>Equipo de WoodBox</h1>
             <hr>
-            <div class="uk-align uk-padding" id="team_members">
+            <div style="margin: 0 auto; display: flex; flex-wrap: wrap;" id="team_members">
             </div>
         </div>
     </main>
@@ -49,9 +49,9 @@ const team = [
     <script is:inline define:vars={{ team }}>
         team.forEach((person) => {
             const article = document.createRange().createContextualFragment(/*html*/ `
-                <div style="width: fit-content;" class="uk-margin uk-border-rounded uk-tile uk-tile-primary uk-padding-small">
-                    <p class="uk-h4">${person.name}</p>
-                    <!-- <small>${person.profession}</small> -->
+                <div style="width: 100%; height: 65px; padding: 2px 10px; border-radius: 10px; max-width: 200px; margin: 10px; border: 1px solid #1e87f050; color: #111; background: #f5f5f5; display: flex; flex-direction: column; justify-content: center;">
+                    <h3 style="margin: 0; color: #1e87f0; font-size: large; font-weight: bold;">${person.name}</h3>
+                    <small style="color: #555;">${person.profession}</small>
                 </div>
             `);
             const team_members = document.getElementById("team_members").append(article);
