Seo fix & add tmp to product layer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ import "../components/uikit/css/uikit-rtl.min.css";
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-30M3SYSKM2"></script>
-		<script>
+		<script type="text/javascript">
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
