--- a/src/components/seo/Seo.astro
+++ b/src/components/seo/Seo.astro
@@ -54,21 +54,23 @@ const beauty_base_url = "woodboxes.co";
 <meta property="og:image" content="./assets/images/brand/CoralaApp.webp">
 <meta property="og:site_name" content={beauty_base_url}>
 
-<script type="application/ld+json" define:vars={{ base_url, name, phrase }}>
-  {
-    "@context": "http://schema.org",
-    "@type": "BreadcrumbList",
-    "itemListElement":
-      [{
-        "@type": "ListItem",
-        "position": 1,
-        "item":
-          {
-            "@id": base_url,
-            "name": `${name}: ${phrase}`
-          }
+<script type="application/ld+json">
+  [
+    {
+      "@context": "http://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement":
+        [{
+          "@type": "ListItem",
+          "position": 1,
+          "item":
+            {
+              "@id": "https://www.woodboxes.co/",
+              "name": "WoodBox: Guarda tus tesoros con estilo y funcionalidad, mientras añades un toque de encanto.",
+            }
         }]
-  }
+    }
+  ]
 </script>
 
 <!-- DNS -->
