--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -88,7 +88,7 @@ const products = [
                                 
                                 </div>` :
                                 `<div style="display: ${product.images.length = 1 ? "block" : "none" }" class="uk-position-relative uk-light">
-                                    <img src="${image[0]}" alt="">
+                                    <img src="${product.images[0]}" alt="">
                                 </div>`
                             }
                         </div>
