--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -86,10 +86,7 @@ const products = [
                                     <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
                                     <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
                                 
-                                </div>` :
-                                `<div style="display: ${product.images.length = 1 ? "block" : "none" }" class="uk-position-relative uk-light">
-                                    <img src="${product.images[0]}" alt="">
-                                </div>`
+                                </div>` : ""
                             }
                         </div>
                         <div style="position: relative;" class="uk-card-body">
