--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -71,9 +71,9 @@ const products = [
                     <div style="border: 1px solid #111;" class="uk-border-rounded uk-card uk-card-default">
                         <div style="border-bottom: 1px solid #111;" class="uk-card-media-top">
                             ${ product.promotion ? `<div style='background: #FBCD17; width: fit-content;' class='uk-card-badge uk-label'> ${product.promotion || ""} </div>` : "" }
-                            ${ product.images.length == 1 ?
+                            ${ product.images.length =< 1 ?
                                 `<div style="display: ${product.images.length == 1 ? "block" : "none" }" class="uk-position-relative uk-light">
-                                    <img src="${product.images[0]}" alt="">
+                                    <img src="${product.images[0] || "./assets/brand/logo.jpg"}" style="width: 100%; height: 100%; object-fit: cover;" alt="">
                                 </div>`: ""
                             }
                             ${ product.images.length > 1 ?
@@ -82,7 +82,7 @@ const products = [
                                     <ul class="uk-slideshow-items">
                                         ${ product.images ? product.images.map((image) => /*html*/ `
                                                 <li>
-                                                    <img src="${image}" alt="">
+                                                    <img src="${image}" alt="" style="width: 100%; height: 100%; object-fit: cover;">
                                                 </li>
                                             `).join("") 
                                         : "" }
