--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -72,7 +72,7 @@ const products = [
                         <div style="border-bottom: 1px solid #111;" class="uk-card-media-top">
                             ${ product.promotion ? `<div style='background: #FBCD17; width: fit-content;' class='uk-card-badge uk-label'> ${product.promotion || ""} </div>` : "" }
                             ${ product.images.length <= 1 ?
-                                `<div style="display: ${product.images.length == 1 ? "block" : "none" }" class="uk-position-relative uk-light">
+                                `<div style="display: ${product.images.length <= 1 ? "block" : "none" }" class="uk-position-relative uk-light">
                                     <img src="${product.images[0] || "./assets/brand/logo.jpg"}" style="width: 100%; height: 100%; object-fit: cover;" alt="">
                                 </div>`: ""
                             }
