--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -7,7 +7,7 @@ import "../styles/contact.css";
 const team = [
     {
         name: "Celeste Rodriguez",
-        profession: "SEO"
+        profession: "CEO"
     },
     {
         name: "Emanuel Zabaleta",
@@ -15,19 +15,19 @@ const team = [
     },
     {
         name: "Ariana Ramos",
-        profession: ""
+        profession: "Contabilidad"
     },
     {
         name: "Santiago Molina",
-        profession: ""
+        profession: "Area de T.I"
     },
     {
         name: "Angie Sandoval",
-        profession: ""
+        profession: "Marketing"
     },
     {
-        name: "Joseph Bernal",
-        profession: ""
+        name: "Jozefh Bernal",
+        profession: "Diseñador"
     }
 ];
 ---
