--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -59,7 +59,7 @@ const products = [
                             ${ product.promotion ? `<div style='background: #FBCD17; width: fit-content;' class='uk-card-badge uk-label'> ${product.promotion || ""} </div>` : "" }
                             ${ product.images.length <= 1 ?
                                 `<div style="display: ${product.images.length <= 1 ? "block" : "none" }" class="uk-position-relative uk-light">
-                                    <img src="${product.images[0] || "./assets/brand/logo.jpg"}" style="border-radius: 20px; width: 100%; height: 100%; object-fit: cover;" alt="">
+                                    <img src="${product.images[0] || "./assets/brand/logo.jpg"}" style="border-top-right-radius: 5px; border-top-left-radius: 5px; width: 100%; height: 100%; object-fit: cover;" alt="">
                                 </div>`: ""
                             }
                             ${ product.images.length > 1 ?
