--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -2,7 +2,6 @@
 import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
-import "../styles/contact.css";
 
 const products = [
     {
@@ -37,7 +36,7 @@ const products = [
 ---
 
 <Layout 
-    title="WoodBox: Sobre nosotros" 
+    title="WoodBox: Nuestros productos" 
     description=""
 >
     <Header />
