--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -83,7 +83,7 @@ const products = [
                             <h3 class="uk-card-title">${product.name}</h3>
                             <p>${product.description}</p>
                             <a style="position: absolute; left: 0; right: 0; bottom: 0; top: 0;" href="${product.link}"></a>
-                            <span>Visit &gt</span>
+                            <span>Visit product &gt</span>
                         </div>
                     </div>
                 </div>
