--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,9 +9,13 @@
 }
 
 body {
+    padding: 20px;
     scroll-behavior: smooth;
     background-color: #F6F6F6;
     font-family: 'Quicksand', sans-serif;
+    
+    height: 100%;
+    min-height: 100vh;
 }
 
 code {
