--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,12 +2,13 @@
 export interface Props {
 }
 //const { } = Astro.props;
-const base_url = "https://www.woodboxes.co";
+//const base_url = "https://www.woodboxes.co";
+const base_url = ".";
 ---
 
   <nav class="uk-navbar-container">
     <div class="" style="max-width: 1000px; margin: 0 auto;">
-        <div uk-navbar class="uk-margin-top uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
+        <div uk-navbar class="uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
                 <a class="uk-active" href=`${base_url}/`>
@@ -21,17 +22,18 @@ const base_url = "https://www.woodboxes.co";
                 <ul class="uk-navbar-nav">
                     <li><a href=`${base_url}/`>Inicio</a></li>
                     <li>
-                        <a href="#">Nosotros</a>
+                        <a href=`${base_url}/our`>Nosotros</a>
                         <div class="uk-navbar-dropdown">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                 <li><a href=`${base_url}/team`>Equipo</a></li>
                                 <li><a href=`${base_url}/about`>Acerca de Nosotros</a></li>
+                                <li><a href=`${base_url}/contact`>Contacto</a></li>
                                 <li><a href=`${base_url}/terms`>Terminos y Condiciones</a></li>
                                 <li><a href=`${base_url}/privacy-policy`>Política de Privacidad</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li><a href=`${base_url}/contact`>Contacto</a></li>
+                    <li><a href=`${base_url}/products`>Productos</a></li>
                 </ul>
 
             </div>
