--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ export interface Props {
 	description: string;
 }
 
+import Header from '../components/header/Header.astro';
+import Footer from '../components/footer/Footer.astro';
 import Seo from '../components/seo/Seo.astro';
 import "../styles/globals.css";
 const { title, description } = Astro.props;
@@ -39,8 +41,9 @@ import "../components/uikit/css/uikit-rtl.min.css";
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
-
+		<Footer />
 		<script src="../components/uikit/js/uikit.js"></script>
 		<script src="../components/uikit/js/uikit-icons.js"></script>
 	</body>
