--- a/src/pages/our.astro
+++ b/src/pages/our.astro
@@ -19,9 +19,8 @@ const links = [
 >
     <main>
         <div style="max-width: 1000px; margin: 0 auto;" class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
-            <h1>Nosotros <img src="./assets/brand/favicon.ico" width="55px" height="55px" alt=""></h1>
-            <hr>
-            <p>
+            <h1 class="uk-flex-inline uk-flex-middle" style="font-weight: bold; font-size: xx-large; margin-bottom: 10px;"><img src="./assets/brand/favicon.ico" width="55px" height="55px" alt="">Nosotros</h1>
+            <p class="uk-margin">
                 Somos una empresa dedicada a la fabricación de muebles de madera, 
                 con más de 10 años de experiencia en el mercado. 
                 Nuestro objetivo es brindarle a nuestros clientes productos de calidad, 
