--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
-import Header from '../components/header/Header.astro';
 import Layout from '../layouts/Layout.astro';
 import brand from "../api/brand.json";
-import products from "../api/products.json";
-import posts from "../api/posts.json";
+import Newsletter from '../components/newsletter.astro';
+import ProductSlider from '../components/product-slider.astro';
 ---
 
 <Layout 
@@ -12,47 +11,13 @@ import posts from "../api/posts.json";
 >
 
 	<main>
-		<div class="uk-margin">
-			<div class="uk-slider-container-offset" uk-slider="finite: false, set: false;">
-				<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-					<ul class="uk-slider-items uk-child-width-1-3@s uk-grid" id="products">
-					</ul>
-					<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-					<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
-				</div>
-				<ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-			</div>
-		</div>
-		<hr>
-		<div class="uk-margin">
-			<div class="uk-slider-container-offset" uk-slider="finite: false, set: false;">
-				<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-					<ul class="uk-slider-items uk-child-width-1-3@s uk-grid" id="posts">
-					</ul>
-					<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-					<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
-				</div>
-				<ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-			</div>
-		</div>
-		<div style="border: 1px solid #111" class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
-			<div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-				<img src="./assets/newsletter.jpg" style="height: 100%; object-fit:cover;" alt="Newsletter WoodBox">
-			</div>
-			<div>
-				<div class="uk-card-body">
-					<h3 class="uk-card-title">Nuestro Newsletter:</h3>
-					<form method="POST" action="#" id="formV1">
-						<label for="form_email">Danos tu correo: </label><input id="form_email" style="border: 1px solid #111;" class="uk-input uk-form-blank uk-form-width-medium" type="email" placeholder="john.doe@gmail.com" required>
-						<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-							<label><input class="uk-checkbox" type="checkbox" required> Acepto terminos y condiciones</label>
-						</div>
-						<button class="uk-button uk-button-default">Suscribirme</button>
-					</form>
-				</div>
-			</div>
+		<div class="uk-flex-column uk-margin uk-border-rounded uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="https://images.unsplash.com/photo-1490822180406-880c226c150b?fit=crop&w=650&h=433&q=80" uk-img>
+			<h1 style="font-weight: bold; font-size: xx-large; gap: 10px;" class="uk-flex-inline uk-flex-middle">
+				<img src="./assets/brand/favicon.ico" style="filter: invert(1);" alt={brand[0].name} width="40px" height="40px">{brand[0].name}
+			</h1>
+			<p>{brand[0].description}</p>
 		</div>		
+		<ProductSlider />
+		<Newsletter />
 	</main>
-	<script src="/assets/js/newsletter.js" is:inline></script>
-    </script>	
 </Layout>
