--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -1,56 +1,23 @@
 ---
-import Header from '../components/header/Header.astro';
-import Footer from '../components/footer/Footer.astro';
-import Layout from '../layouts/Layout.astro';
-
-const products = [
-    {
-        name: "WoodBox Small Nature",
-        description: "Es una caja personalizada tematizada sobre la naturaleza.",
-        images: ["https://t4.ftcdn.net/jpg/05/47/74/67/360_F_547746791_AaOMo0yf5FNpns8PZ09Idmvo9KKIHqr4.webp", "https://t4.ftcdn.net/jpg/02/91/24/27/360_F_291242770_z3XC7rJB1Mvc5jVMsEY9Dx2xMrX4sxUi.jpg"],
-        link: "woodbox-small-nature",
-        promotion: null
-    },
-    {
-        name: "WoodBox Medium Nature",
-        description: "En un tamaño medio incluye la escencia de la flora y fauna de la Naturaleza.",
-        images: ["https://t4.ftcdn.net/jpg/05/47/74/67/360_F_547746791_AaOMo0yf5FNpns8PZ09Idmvo9KKIHqr4.webp"],
-        link: "woodbox-medium-nature",
-        promotion: "POPULAR"
-    },
-    {
-        name: "WoodBox Big Nature",
-        description: "En una caja grande podras encontrar un diseño especial con tematica del oceano.",
-        images: [],
-        link: "woodbox-big-nature",
-        promotion: null
-    },
-    {
-        name: "WoodBox: Custom work",
-        description: "En una caja personalizada, tu podras diseñar la tematica de la caja.",
-        images: [],
-        link: "woodbox-custom",
-        promotion: "10%"
-    },
-];
+import Layout from '../../layouts/Layout.astro';
+import allProducts from "../../api/products.json";
+import brand from "../../api/brand.json";
 ---
 
 <Layout 
     title="WoodBox: Nuestros productos" 
     description=""
 >
-    <Header />
     <main>
         <div style="max-width: 1000px; margin: 0 auto;" class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
-            <h1>Productos de la empresa</h1>
+            <h1>Productos de WoodBox</h1>
             <hr>
             <div class="uk-child-width-1-2@m" uk-grid id="products">
             </div>
         </div>    
     </main>
-    <Footer />
-    <script is:inline define:vars={{ products }}>
-        products.forEach((product) => {
+    <script is:inline define:vars={{ allProducts, brand }}>
+        allProducts.forEach((product) => {
             const article = document.createRange().createContextualFragment(/*html*/ `
                 <div>
                     <div style="border: 1px solid #111;" class="uk-border-rounded uk-card uk-card-default">
@@ -82,7 +49,7 @@ const products = [
                         <div style="position: relative;" class="uk-card-body">
                             <h3 class="uk-card-title">${product.name}</h3>
                             <p>${product.description}</p>
-                            <a style="position: absolute; left: 0; right: 0; bottom: 0; top: 0;" href="${product.link}"></a>
+                            <a style="position: absolute; left: 0; right: 0; bottom: 0; top: 0;" href="${brand[0].base_url}/products/${product.link}"></a>
                             <span>Visit product &gt</span>
                         </div>
                     </div>
