--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -1,34 +1,7 @@
 ---
-import Header from '../components/header/Header.astro';
 import Layout from '../layouts/Layout.astro';
+import team from '../api/team.json';
 import "../styles/contact.css";
-
-const team = [
-    {
-        name: "Celeste Rodriguez",
-        profession: "CEO"
-    },
-    {
-        name: "Emanuel Zabaleta",
-        profession: "Web Developer"
-    },
-    {
-        name: "Ariana Ramos",
-        profession: "Contabilidad"
-    },
-    {
-        name: "Santiago Molina",
-        profession: "Area de T.I"
-    },
-    {
-        name: "Angie Sandoval",
-        profession: "Marketing"
-    },
-    {
-        name: "Jozefh Bernal",
-        profession: "Diseñador"
-    }
-];
 ---
 
 <Layout 
