[UPDATE] Use Tailwind & Page  for Products

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -12,7 +12,7 @@ const base_url = brand[0].base_url;
 
             <div class="uk-navbar-left">
                 <a class="uk-active uk-flex-inline uk-flex-middle" style="gap: 5px" href=`${base_url}/`>
-                    <img style="filter: invert(1);" width="30px" height="30px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
+                    <img style="filter: invert(1);" width="30px" height="30px" src="https://www.woodboxes.co/assets/brand/favicon.ico" alt="WoodBox Logo" />
                     <strong>WoodBox</strong>
                 </a>
             </div>
