--- a/src/components/seo/Seo.astro
+++ b/src/components/seo/Seo.astro
@@ -22,11 +22,11 @@ const beauty_base_url = "woodboxes.co";
 <meta name="apple-mobile-web-app-status-bar-style" content="#ff6f61">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<link rel="manifest" href="./manifest.json" />
-<link rel="canonical" href={base_url}>
+<link rel="manifest" href="https://www.woodboxes.co/manifest.json" />
+<!-- <link rel="canonical" href={base_url}> -->
 <link rel="alternate" hreflang="x-default" href={base_url}>
 <link rel="alternate" hreflang="es" href={base_url}>
-<meta name="title" content="Corala">
+<meta name="title" content={name}>
 <meta name="apple-mobile-web-app-title" content={name}>
 <meta name="application-name" content={name}>
 <meta name="description" content=`${name}: ${phrase}`>
@@ -39,11 +39,11 @@ const beauty_base_url = "woodboxes.co";
 <link rel="icon" type="image/png" sizes="32x32" href="./assets/brand/ico/isotipo32.png">
 <link rel="icon" type="image/png" sizes="180x180" href="./assets/brand/ico/isotipo180.png">
 <link rel="icon" type="image/png" sizes="192x192" href="./assets/brand/ico/isotipo192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="./assets/brand/ico/isotipo512.png">
+<!-- <link rel="icon" type="image/png" sizes="512x512" href="./assets/brand/ico/isotipo512.png"> -->
 
 <!-- Preconnect -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
 
 <!-- SEO -->
 <meta property="og:title" content={name}>
@@ -51,7 +51,7 @@ const beauty_base_url = "woodboxes.co";
 <meta property="og:type" content="website">
 <meta property="og:locale" content="es_CO">
 <meta property="og:url" content={base_url}>
-<meta property="og:image" content="./assets/images/brand/CoralaApp.webp">
+<meta property="og:image" content="./assets/brand/logo.jpg">
 <meta property="og:site_name" content={beauty_base_url}>
 
 <script type="application/ld+json">
