--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import brand from "../api/brand.json";
 import ProductSlider from '../components/product-slider.astro';
 import GoToSocial from '../components/goToSocial.astro';
 import Newsletter from '../components/newsletter.astro';
+import Testimonials from '../components/testimonials.astro';
 ---
 
 <Layout 
@@ -20,6 +21,7 @@ import Newsletter from '../components/newsletter.astro';
 		</div>		
 		<ProductSlider />
 		<GoToSocial />
+		<Testimonials />
 		<Newsletter />
 	</main>
 </Layout>
