--- a/src/components/testimonials.astro
+++ b/src/components/testimonials.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="bg-white uk-margin-top">
+<section class="uk-margin-top">
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8">
     <h2 class="text-center text-4xl font-bold tracking-tight sm:text-5xl">
       Read trusted reviews from our customers
