--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import ProductSlider from '../components/product-slider.astro';
 import GoToSocial from '../components/goToSocial.astro';
 import Newsletter from '../components/newsletter.astro';
 import Testimonials from '../components/testimonials.astro';
+import Whyus from '../components/whyUs.astro';
 ---
 
 <Layout 
@@ -22,6 +23,7 @@ import Testimonials from '../components/testimonials.astro';
 		<ProductSlider />
 		<GoToSocial />
 		<Testimonials />
+		<Whyus />
 		<Newsletter />
 	</main>
 </Layout>
