--- a/src/components/testimonials.astro
+++ b/src/components/testimonials.astro
@@ -9,7 +9,7 @@
     </h2>
 
     <div class="mt-12 grid grid-cols-1 gap-4 md:grid-cols-3 md:gap-8">
-      <blockquote class="rounded-lg bg-gray-100 p-8">
+      <blockquote class="rounded-lg bg-white p-8">
         <div class="flex items-center gap-4">
           <img
             alt="Man"
@@ -81,7 +81,7 @@
         </p>
       </blockquote>
 
-      <blockquote class="rounded-lg bg-gray-100 p-8">
+      <blockquote class="rounded-lg bg-white p-8">
         <div class="flex items-center gap-4">
           <img
             alt="Man"
@@ -153,7 +153,7 @@
         </p>
       </blockquote>
 
-      <blockquote class="rounded-lg bg-gray-100 p-8">
+      <blockquote class="rounded-lg bg-white p-8">
         <div class="flex items-center gap-4">
           <img
             alt="Man"
