--- a/src/components/whyUs.astro
+++ b/src/components/whyUs.astro
@@ -2,12 +2,6 @@
 
 ---
 
-<!--
-  Heads up! 👋
-
-  This component comes with some `rtl` classes. Please remove them if they are not needed in your project.
--->
-
 <section
   class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2 sm:items-center"
 >
@@ -16,19 +10,16 @@
       class="mx-auto max-w-xl text-center ltr:sm:text-left rtl:sm:text-right"
     >
       <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit
+        ¿Por qué nosotros?
       </h2>
 
       <p class="hidden text-gray-500 md:mt-4 md:block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, egestas
-        tempus tellus etiam sed. Quam a scelerisque amet ullamcorper eu enim et
-        fermentum, augue. Aliquet amet volutpat quisque ut interdum tincidunt
-        duis.
+        Creemos que a travez de implementar diseños calidos para tí, se podra disminuir la perdida de calidad, si conjuntamente customisamos tus cajas. Volviendolas accesibles y unicas.
       </p>
 
       <div class="mt-4 md:mt-8">
         <a
-          href="#"
+          href="./our"
           class="inline-block rounded bg-emerald-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-emerald-700 focus:outline-none focus:ring focus:ring-yellow-400"
         >
           Get Started Today
