--- a/src/components/whyUs.astro
+++ b/src/components/whyUs.astro
@@ -22,7 +22,7 @@
           href="./our"
           class="inline-block rounded bg-emerald-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-emerald-700 focus:outline-none focus:ring focus:ring-yellow-400"
         >
-          Get Started Today
+          Sobre nosotros
         </a>
       </div>
     </div>
