--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import GoToSocial from '../components/goToSocial.astro';
 import Newsletter from '../components/newsletter.astro';
 import Testimonials from '../components/testimonials.astro';
 import Whyus from '../components/whyUs.astro';
+import Faqs from '../components/faqs.astro';
 ---
 
 <Layout 
@@ -25,5 +26,6 @@ import Whyus from '../components/whyUs.astro';
 		<Testimonials />
 		<Whyus />
 		<Newsletter />
+		<Faqs />
 	</main>
 </Layout>
