cambio de 10 años

--- a/src/pages/our.astro
+++ b/src/pages/our.astro
@@ -22,7 +22,7 @@ const links = [
             <h1 class="uk-flex-inline uk-flex-middle" style="font-weight: bold; font-size: xx-large; margin-bottom: 10px;"><img src="./assets/brand/favicon.ico" width="55px" height="55px" alt="">Nosotros</h1>
             <p class="uk-margin">
                 Somos una empresa dedicada a la fabricación de muebles de madera, 
-                con más de 10 años de experiencia en el mercado. 
+                con gran experiencia en el mercado gracias a los integrantes del equipo. 
                 Nuestro objetivo es brindarle a nuestros clientes productos de calidad, 
                 con diseños innovadores y a precios accesibles.
             </p>
